--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,13 @@ layout: default
 <h1>{{ page.title }}</h1>
 
 <p>
-  {{ page.tags }}
+  {%- if page.tags -%}
+    {% for tag in page.tags %}
+        <a href="{{site.baseurl}}/alltags.html#{{tag | slugize}}">
+            #{{ tag }}
+        </a>
+    {% endfor %}
+{%- endif -%}
   {{ page.date | date_to_string }}
   {% assign author = site.authors | where: 'short_name', page.author | first %}
   {% if author %}
