--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,9 @@
 <nav>
     {% for item in site.data.navigation %}
-  <a href="{{ item.link }}" {% if page.url == item.link %} class ="current"{% else %}class ="another"{% endif %}>
+  <a href="{{ item.link }}" 
+  {% if page.url == item.link %} class ="current"
+  {% else %}class ="another"
+  {% endif %}>
    {{ item.name }}
   </a>
   {% endfor %}
