--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,12 @@
 ---
 layout: default
 ---
+
+<!--Informações da Postagem-->
+
 <h1>{{ page.title }}</h1>
 
+<div>
 <p>
   {%- if page.tags -%}
     {% for tag in page.tags %}
@@ -18,4 +22,12 @@ layout: default
   {% endif %}
 </p>
 
+</div>
+
+<br>
+
+<!--Texto da postagem do blog em si-->
+
+<div id="content">
 {{ content }}
+</div>
