--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,14 +2,25 @@
 @import url("/assets/fonts/main-font/grotesque.css");
 
 /*Principal*/
+
 body {
   font-family:'Terminal Grotesque';
 }
 
-#content {
-  margin: 0 400px;
-}
+/*Texto do post*/
+#post-text {
+  margin: 0 200px;
+   p {
+    color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+      img {
+        padding: 1em;
+        }
+    }
+}
 
 /*Barra de navegação*/
 .current {
