--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <!--Variável de título da página-->
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <script async src="/assets/js/main.js"></script>
   </head>
   <body>
     <!--Incluindo a barra de navegação-->
